.k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: ${DEPLOYMENT_NAME}
  labels:
    app: development

spec:
  replicas: 2
  selector:
    matchLabels:
      app: development
  template:
    metadata:
      labels:
        app: development
    spec:
      containers:
        - name: ${DEPLOYMENT_NAME}
          image: ${GAR_LOCATION}-docker.pkg.dev/${PROJECT_ID}/${REPOSITORY}/${IMAGE}:${TAG}
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
          resources:
            requests:
              memory: "1000Mi"
              cpu: "512m"
            limits:
              memory: "1024Mi"
              cpu: "1000m"
      imagePullSecrets:
        - name: gar-auth
