.k8s/service.yml
apiVersion: "v1"
kind: "Service"
metadata:
  name: ${DEPLOYMENT_NAME}
  namespace: "default"
  labels:
    app: "development"
spec:
  ports:
    - protocol: "TCP"
      port: 8081
      targetPort: 8081
  selector:
    app: "development"
  type: "LoadBalancer"
  loadBalancerIP: ""
